--- a/cluster/plex/kustomization.yaml
+++ b/cluster/plex/kustomization.yaml
@@ -4,7 +4,7 @@ kind: Kustomization
 namespace: media
 
 resources:
-  - ../namespace.yaml
+  - namespace.yaml
   - pvc.yaml
   - deployment.yaml
   - service.yaml
