--- a/cluster/jellyfin/kustomization.yaml
+++ b/cluster/jellyfin/kustomization.yaml
@@ -7,5 +7,4 @@ resources:
   - namespace.yaml
   - pvc.yaml
   - deployment.yaml
-  - secret.yaml
-  # service.yaml not needed with hostNetwork: true
+  - service.yaml
