--- a/cluster/jellyfin/deployment.yaml
+++ b/cluster/jellyfin/deployment.yaml
@@ -17,6 +17,10 @@ spec:
       labels:
         app: jellyfin
     spec:
+      securityContext:
+        fsGroup: 1000
+        runAsUser: 1000
+        runAsGroup: 1000
       containers:
         - name: jellyfin
           image: jellyfin/jellyfin:latest
