--- a/cluster/joplin/service.yaml
+++ b/cluster/joplin/service.yaml
@@ -1,6 +1,23 @@
 apiVersion: v1
 kind: Service
 metadata:
+  name: joplin-db
+  namespace: joplin
+  labels:
+    app: joplin-db
+spec:
+  type: ClusterIP
+  ports:
+    - name: postgres
+      port: 5432
+      targetPort: 5432
+      protocol: TCP
+  selector:
+    app: joplin-db
+---
+apiVersion: v1
+kind: Service
+metadata:
   name: joplin
   namespace: joplin
   labels:
