--- a/cluster/jellyfin/pvc.yaml
+++ b/cluster/jellyfin/pvc.yaml
@@ -17,7 +17,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: jellyfin-config-pvc
-  namespace: media
+  namespace: jellyfin
 spec:
   storageClassName: manual
   accessModes:
@@ -45,7 +45,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: jellyfin-media-pvc
-  namespace: media
+  namespace: jellyfin
 spec:
   storageClassName: manual
   accessModes:
@@ -73,7 +73,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: jellyfin-cache-pvc
-  namespace: media
+  namespace: jellyfin
 spec:
   storageClassName: manual
   accessModes:
