--- a/cluster/namespace.yaml
+++ b/cluster/namespace.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: media
+  name: home-server
   labels:
-    app.kubernetes.io/name: media
+    app.kubernetes.io/name: home-server
